--- a/src/main/webapp/fb2.html
+++ b/src/main/webapp/fb2.html
@@ -59,5 +59,6 @@
         <div id="status">
         </div>
         <a id='facebookLogOutButton' href="#"  >Logout</a>
+         <a id='facebookLogInRedirect' href="#"  >Login Redirect</a>
     </body>
 </html>
