--- a/src/main/webapp/fb2.html
+++ b/src/main/webapp/fb2.html
@@ -25,7 +25,7 @@
         <!--Once someone has clicked the Login button, and accepted the login dialog — completing the Login flow — your app can now use the Facebook SDK for JavaScript to make API calls on behalf of that person.-->     
  
         
-        <div class="_xvm  facebookLoginButton" >
+        <div class="_xvm  facebookLoginButton" style="display:none">
             <div class="_5h0c _5h0d" style="" role="button" tabindex="0">
                 <table   cellspacing="0" cellpadding="0">
                     <tbody>
