--- a/src/main/webapp/button2.html
+++ b/src/main/webapp/button2.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <title>Facebook</title>
-        <link rel="stylesheet" href="css/button2.css">
+        <link rel="stylesheet" href="css/buttonOnly.css">
     </head>
     <body  >
 
